tests/NormalTests/paczka1/fuzzy1/41945183.err
Error in line 5: hHIO6j A206 49,8
Error in line 10: W7KoGQ S492 159,2
Error in line 13: W7KoGQ S870 3,3
Error in line 21: W7KoGQ S766 540,1
Error in line 27: hHIO6j A206 80,5
Error in line 37: WogWHAzluy S766 33,5
